[package]
name = "terminal-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14"
image = "0.23.14"
termion = "1.5.6"
reqwest =  {version = "0.11.6", features = ["blocking"]}
serde_json = "1.0.68"

